--- a/test.html
+++ b/test.html
@@ -42,7 +42,7 @@
 <div>
     <h1>Hello to all</h1>
     <p>This is the stuff i have so far.</p>
-    <a href="https://dimitris1ps.github.io/R_Python_Basics/"> R - Python Basics </a>
+    <a href="https://dimitris1ps.github.io/R_Python_Basics/"> R - Python Basics </a><hr>
     <a href="https://dimitris1ps.github.io/oecd/"> The never ending story</a>
 </div>
 </body>
